# pyjuicefs

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: rename_project.sh
pyjuicefs/: __init__.py  __main__.py  base.py  cli.py
tests/: conftest.py  test_base.py
